<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/tv_summary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_title"
        style="@style/Title"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_summary_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_subtitle"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_summary_title"/>

    <TextView
        android:id="@+id/tv_total_table_label"
        android:text="@string/total_table"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_summary_subtitle"/>

    <TextView
        android:id="@+id/tv_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_table_label" />

    <TextView
        android:id="@+id/tv_num_people_label"
        android:text="@string/number_of_people"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_total_table_label"/>

    <TextView
        android:id="@+id/tv_num_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_people_label" />

    <TextView
        android:id="@+id/tv_percentage_label"
        android:text="@string/percentage"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_num_people_label"/>

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_percentage_label" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_percentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/tv_total_amount_label"
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator"/>

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/tv_total_amount_label"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>